# generalized_agv_path_finding

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
pyroutingkit/: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .pypirc  CMakeLists.txt  README.md
pyroutingkit/src/: CMakeLists.txt  build.bat  pyproject.toml
pyroutingkit/src/cpp/app/: CMakeLists.txt  main.cpp
pyroutingkit/src/cpp/dependencies/routingkit/: CMakeLists.txt
pyroutingkit/src/cpp/dependencies/zlib/lib/: zlib.lib  zlibd.lib
pyroutingkit/src/cpp/lib/: CMakeLists.txt
pyroutingkit/src/cpp/lib/include/pyroutingkit/: DurationAndDistance.h  GraphPreparator.h  LargestComponentFilter.h  OsmGraphLoader.h  PointLatLon.h  Route.h  RouteArc.h  RoutingGraph.h  RoutingMode.h  RoutingService.h
pyroutingkit/src/cpp/lib/src/: DurationAndDistance.cpp  GraphPreparator.cpp  LargestComponentFilter.cpp  OsmGraphLoader.cpp  PointLatLon.cpp  Route.cpp  RouteArc.cpp  RoutingGraph.cpp  RoutingService.cpp
pyroutingkit/src/cpp/test/: CMakeLists.txt  GraphPreparatorTest.cpp
pyroutingkit/src/python/: bindings.cpp
pyroutingkit/src/python/pyroutingkit/: __init__.py
src/generalized_path_finding/: __init__.py  helper.py
src/generalized_path_finding/algorithms/: __init__.py  a_star.py  nx_routing_kit.py  osm_routing_kit.py  routing_kit.py
src/generalized_path_finding/formats/: __init__.py
src/generalized_path_finding/formats/lif/: __init__.py  action.py  camelserial.py  edge.py  layout.py  lif.py  lif_data_provider.py  metainformation.py  node.py  station.py  trajectory.py
src/generalized_path_finding/formats/mfn_excel/: __init__.py  connection.py  fleet_list.py  mfn.py  mfn_data_provider.py  node.py  path.py
src/generalized_path_finding/formats/osm/: __init__.py  osm_data_provider.py  routing_kit_filters.py
src/generalized_path_finding/model/: __init__.py  ch_data.py  data_provider.py  networkx_data.py  osm_ch_data.py  path.py  pathfinder.py
src/generalized_path_finding/nodes/: __init__.py  geo_coords.py  vda5050_position.py
tests/: constants.py  test_helper.py  test_lif_astar_integration.py  test_lif_routingkit_integration.py  test_osm_nx_integration.py  util.py
tests/algorithms/: test_a_star.py  test_nx_a_star.py  test_nx_routing_kit.py  test_osm_routingkit.py  test_routing_kit.py  test_shortest_path.py
tests/formats/lif/: LIF_4_4_MAPF.json  LIF_4_4_MAPF_b.json  LIF_multiple_vehicle_types.json  LIF_single_edge.json  LIF_trajectory.json  LIF_wrong_version.json  test_action.py  test_edge.py  test_lif_data_provider.py  test_lif_parsing.py  test_node.py  test_station.py  test_trajectory.py
tests/formats/mfn_excel/: MFN_11000_nodes.xlsx  MFN_Roboter_only.xlsx  MFN_example.xlsx  MFN_missing_sheet.xlsx  test_connection.py  test_mfn_data_provider.py  test_mfn_parsing.py  test_path.py
tests/formats/osm/: test_osm.py
tests/model/: test_vda5050_position.py
