[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pyroutingkit"
version = "0.0.10"
description="Python-wrapped C++ Routing"
requires-python = ">=3.7"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true

[tool.cibuildwheel]
build-verbosity = 1